# OpenCV_practice

C++/: CMakeLists.txt
C++/cap_crop_src/: camera_cap.cpp  main.cpp  utility.cpp
C++/imencode_decode_src/: main.cpp
C++/include/: camera_cap.h  utility.h
Python/FaceTrackingDemo/: FacePosition.py
include/: camera_cap.h
src/: camera_cap.cpp  utility.cpp
